Absolute made the fab jump around. Fixed is better

--- a/Foosball/ClientApp/src/app/account/account.component.scss
+++ b/Foosball/ClientApp/src/app/account/account.component.scss
@@ -19,6 +19,6 @@
 .loading {
   top: 0;
   left: -16px;
-  position: absolute;
+  position: fixed;
   width: calc(100vw + 32px);
 }
