--- a/Foosball/ClientApp/src/app/last-games/last-games.component.scss
+++ b/Foosball/ClientApp/src/app/last-games/last-games.component.scss
@@ -53,6 +53,6 @@ h2 {
 .loading {
   top: 0;
   left: -16px;
-  position: absolute;
+  position: fixed;
   width: calc(100vw + 32px);
 }
