--- a/Foosball/ClientApp/src/app/leaderboard/leaderboard.component.scss
+++ b/Foosball/ClientApp/src/app/leaderboard/leaderboard.component.scss
@@ -64,6 +64,6 @@ p {
 .loading {
   top: 0;
   left: -16px;
-  position: absolute;
+  position: fixed;
   width: calc(100vw + 32px);
 }
